add readme for how to run app